# bevy_bundlication

./: Cargo.toml  LICENSE-MIT  README.md
benches/: Cargo.toml  replication.rs
benches/benches/: replication.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: buffer.rs  bundle_info.rs  client_authority.rs  component_info.rs  despawn.rs  identifier.rs  iter.rs  lib.rs  renet_impl.rs  test_impl.rs  tick.rs
tests/: attributes.rs  client_authority.rs  despawn.rs  events.rs  many_entities.rs  new_client.rs  no_old_changes.rs  overlapping_bundles.rs  remote_component.rs  spawn.rs  update.rs
