[workspace]
package.version = "0.3.0"
package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/NiseVoid/bevy_bundlication"

members = [".", "macros", "benches"]

[package]
name = "bevy_bundlication"
description = "Network replication for bevy based on a bundle pattern"
readme = "README.md"
keywords = [
  "bevy",
  "networking",
  "server-authoritative",
  "replication",
]
categories = ["game-development", "network-programming"]
exclude = ["benches/*", "tests/*"]

version.workspace = true
license.workspace = true
repository.workspace = true

edition = "2021"

[dependencies]
bevy_bundlication_macros = {version = "0.3.0", path = "macros"}

bevy = {version = "0.13", default_features=false}
bevy_renet = {version = "0.0.11", default-features=false, optional = true}

bincode = "1.3"
serde = "1.0"

[features]
default = []
test = []
renet = ["dep:bevy_renet"]

[dev-dependencies]
bevy_bundlication = { path = ".", default-features = false, features = ["test"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
