[workspace]
package.version = "0.6.0"
package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/NiseVoid/bevy_bundlication"

members = [".", "macros"]

[package]
name = "bevy_bundlication"
description = "Replication rules for bevy_replicon based on a bundle pattern"
readme = "README.md"
keywords = [
  "bevy",
  "networking",
  "server-authoritative",
  "replication",
]
categories = ["game-development", "network-programming"]
exclude = ["tests/*"]

version.workspace = true
license.workspace = true
repository.workspace = true

edition = "2021"

[dependencies]
bevy_bundlication_macros = {version = "0.6.0", path = "macros"}

bevy = { version = "0.14", default-features=false }
bevy_replicon = { version = "0.27", default-features=false }

bincode = "1.3"
serde = "1.0"

[dev-dependencies]
bevy_replicon = { version = "0.27", default-features=false, features = ["server", "client"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
