[workspace]
package.version = "0.13.0"
package.license = "MIT OR Apache-2.0"
package.repository = "https://github.com/NiseVoid/bevy_bundlication"

members = [".", "macros"]

[package]
name = "bevy_bundlication"
description = "Replication rules for bevy_replicon based on a bundle pattern"
readme = "README.md"
keywords = [
  "bevy",
  "networking",
  "server-authoritative",
  "replication",
]
categories = ["game-development", "network-programming"]
exclude = ["tests/*"]

version.workspace = true
license.workspace = true
repository.workspace = true

edition = "2024"

[dependencies]
bevy_bundlication_macros = {version = "0.13.0", path = "macros"}

bevy = { version = "0.16", default-features=false }
bevy_replicon = { version = "0.34", default-features=false }

postcard = {version = "1.1", default-features=false, features = ["use-std"]}
serde = "1.0"
bytes = {version = "1.10", default-features=false, features=["std"]}

[dev-dependencies]
bevy_replicon = { version = "0.34", default-features=false, features = ["server", "client"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
