[package]
name = "benches"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
serde = "1.0"
bevy_bundlication = { path = "../", features = ["test"] }
bevy = { version = "0.12", default-features = false }
criterion = { version = "0.5", default-features = false, features = [
  "cargo_bench_support",
] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
strip = true
panic = "abort"

[[bench]]
name = "replication"
harness = false
