[package]
name = "bevy_bundlication_macros"
description = "Macros for bevy_bundlication"

version.workspace = true
license.workspace = true
repository.workspace = true

edition = "2024"

[lib]
proc-macro = true

[dependencies]
bevy_macro_utils = "0.17"

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
